--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss-import": "^15.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.1",
     "styled-components": "6.0.0-beta.2",
     "styled-jsx": "5.1.0",
     "tslib": "^2.4.1",
