--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@react-three/cannon": "^6.5.0",
+    "@react-three/drei": "^9.40.0",
+    "@react-three/fiber": "^8.9.1",
     "@tailwindcss/typography": "^0.5.8",
     "clsx": "1.2.1",
     "concurrently": "7.5.0",
@@ -30,6 +33,7 @@
     "react-hook-form": "^7.39.1",
     "styled-components": "6.0.0-beta.2",
     "styled-jsx": "5.1.0",
+    "three": "^0.146.0",
     "tslib": "^2.4.1",
     "use-count-up": "3.0.1"
   },
@@ -37,6 +41,7 @@
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/three": "^0.146.0",
     "autoprefixer": "^10.4.13",
     "eslint": "8.19.0",
     "eslint-config-next": "latest",
