--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@react-three/cannon": "^6.5.0",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.1",
+    "@supabase/supabase-js": "^2.1.0",
     "@tailwindcss/typography": "^0.5.8",
     "clsx": "1.2.1",
     "concurrently": "7.5.0",
     "daisyui": "^2.38.1",
+    "encoding": "^0.1.13",
     "next": "latest",
     "postcss-import": "^15.0.0",
     "react": "18.2.0",
