--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@react-three/cannon": "^6.5.0",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.1",
+    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.2.6",
     "@supabase/supabase-js": "^2.1.0",
     "@tailwindcss/typography": "^0.5.8",
+    "axios": "^1.1.3",
     "clsx": "1.2.1",
     "concurrently": "7.5.0",
     "daisyui": "^2.38.1",
@@ -37,7 +41,8 @@
     "styled-jsx": "5.1.0",
     "three": "^0.146.0",
     "tslib": "^2.4.1",
-    "use-count-up": "3.0.1"
+    "use-count-up": "3.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
@@ -45,6 +50,7 @@
     "@types/react-dom": "18.0.6",
     "@types/three": "^0.146.0",
     "autoprefixer": "^10.4.13",
+    "classnames": "^2.3.2",
     "eslint": "8.19.0",
     "eslint-config-next": "latest",
     "postcss": "^8.4.18",
