--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@dice-roller/rpg-dice-roller": "^5.2.1",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
