--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint",
     "tailwind": "tailwindcss -i styles/globals.css -o styles/dist.css",
     "format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
-    "postinstall": "yarn tailwind"
+    "postinstall": "yarn tailwind",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "prettier": {
     "arrowParens": "always",
@@ -27,37 +29,58 @@
     "@supabase/auth-ui-react": "^0.2.6",
     "@supabase/supabase-js": "^2.1.0",
     "@tailwindcss/typography": "^0.5.8",
-    "axios": "^1.1.3",
-    "clsx": "1.2.1",
-    "concurrently": "7.5.0",
-    "daisyui": "^2.38.1",
+    "axios": "^1.2.0",
+    "clsx": "^1.2.1",
+    "concurrently": "^7.6.0",
+    "daisyui": "^2.42.0",
     "encoding": "^0.1.13",
-    "next": "latest",
+    "next": "^13.0.5",
     "postcss-import": "^15.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.39.1",
-    "styled-components": "6.0.0-beta.2",
-    "styled-jsx": "5.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.5",
+    "styled-components": "^5.3.6",
+    "styled-jsx": "^5.1.0",
     "three": "^0.146.0",
     "tslib": "^2.4.1",
-    "use-count-up": "3.0.1",
+    "use-count-up": "^3.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
     "@dice-roller/rpg-dice-roller": "^5.2.1",
+    "@mdx-js/react": "^1.6.22",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-backgrounds": "^6.5.13",
+    "@storybook/addon-docs": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/addon-measure": "^6.5.13",
+    "@storybook/addon-outline": "^6.5.13",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addons": "^6.5.13",
+    "@storybook/builder-vite": "^0.2.5",
+    "@storybook/channel-postmessage": "^6.5.13",
+    "@storybook/channel-websocket": "^6.5.13",
+    "@storybook/client-api": "^6.5.13",
+    "@storybook/preview-web": "^6.5.13",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/three": "^0.146.0",
     "autoprefixer": "^10.4.13",
+    "babel-loader": "^9.1.0",
     "classnames": "^2.3.2",
-    "eslint": "8.19.0",
-    "eslint-config-next": "latest",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.12",
-    "tailwindcss": "^3.1.6",
-    "typescript": "4.7.4"
+    "eslint": "^8.28.0",
+    "eslint-config-next": "^13.0.5",
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.0",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4"
   }
 }
