Update dice rolls to display users display name

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,11 @@
 nodeLinker: pnpm
 
 yarnPath: .yarn/releases/yarn-3.2.4.cjs
+
+packageExtensions:
+  follow-redirects@^1.15.0:
+    dependencies:
+      debug: '*'
+  debug@*:
+    dependencies:
+      supports-color: '*'
