--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@react-three/cannon": "^6.5.0",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.1",
