--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jotai": "^1.11.0",
     "next": "^13.0.5",
     "postcss-import": "^15.0.0",
+    "random-word-slugs": "^0.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
